# WarLand

./: CMakeLists.txt  README.md  imgui.ini
assets/textures/: world_2d_atlas.txt
docs/: ARCHITECTURE.md  DESIGN.md  ROADMAP.md  TECH_STACK.md
scripts/: build.ps1  run.ps1  setup.ps1
src/: main.cpp
src/Core/: Application.cpp  Application.h  Config.h  EventBus.h  HUD.cpp  HUD.h  LoadingScreen.cpp  LoadingScreen.h  Log.h  Time.h
src/Engine/AI/: BehaviorTree.h  GOAP.h  Pathfinding.h
src/Engine/Audio/: AudioEngine.h
src/Engine/ECS/: Entity.h  Registry.h
src/Engine/ECS/Components/: AI.h  Name.h  Person.h  PhysicsBody.h  Renderable.h  Residence.h  Road.h  Transform.h
src/Engine/ECS/Systems/: AISystem.h  EconomySystem.h  MessagingSystem.h  NavigationSystem.h  PhysicsSystem.h  RenderingSystem.h  TimeSystem.h
src/Engine/Gameplay/Character/: Animation.h  CharacterCamera.h  CharacterController.h  Interaction.h  Inventory.h
src/Engine/Gameplay/City/: Building.h  Citizen.h  CityController.h  CityGenerator.h  JobSystem.h  TrafficSystem.h  UtilityNetworks.h
src/Engine/Gameplay/Common/: Calendar.h  Diplomacy.h  Economy.h  Factions.h  Messaging.h
src/Engine/Gameplay/WorldMap/: Country.h  Courier.h  FogOfWar.h  MapGenerator.h  Province.h  RoadNetwork.h  WorldMapController.h
src/Engine/Physics/: Collision.h  NavMesh.h  Physics.h
src/Engine/Rendering/: Camera.h  Mesh.h  Renderer.h  SceneGraph.h  Shader.h  Terrain.h  Texture.h
src/Engine/Rendering/GL/: TileAtlas.cpp  TileAtlas.h  TileMap.cpp  TileMap.h  TileRenderer2D.cpp  TileRenderer2D.h  stb_image_impl.cpp
src/Engine/Rendering/UI/: ImGuiLayer.h  UIManager.h
src/Engine/Rendering/World/: FarMapRenderer.cpp  FarMapRenderer.h  SimpleWorldMeshRenderer.cpp  SimpleWorldMeshRenderer.h
src/Engine/Resources/: AssetLoader.h  ResourceManager.h
src/Engine/Scripting/: Scripting.h
src/Engine/Simulation/: LOD.h  SaveGame.h  Scheduler.cpp  Scheduler.h  Timewarp.h
src/Engine/UI/: CharacterUI.h  CityUI.h  HUD.h  MapUI.h  Menus.h  Overlays.h
src/Engine/WorldGen/: BiomeGenerator.cpp  BiomeGenerator.h  TerrainNoise.cpp  TerrainNoise.h
src/Platform/: FileSystem.h  Input.cpp  Input.h  Window.cpp  Window.h
src/Tools/AssetPacker/: AssetPackerApp.h  AzgaarImporter.cpp  AzgaarImporter.h  BiomeMapImporter.cpp  BiomeMapImporter.h  WorldGenerator.cpp
src/Tools/CityEditor/: CityEditorApp.h
src/Tools/MapEditor/: MapEditorApp.h
src/Tools/NavmeshBuilder/: NavmeshBuilderApp.h
tests/: CMakeLists.txt
